fixed spacing on alerts

--- a/assets/stylesheets/output/main/main.css
+++ b/assets/stylesheets/output/main/main.css
@@ -963,6 +963,12 @@ figure {
   padding: 1em;
 }
 
+@media screen and (max-width: 600px) {
+	.usa-alert {
+		background-position: 0rem 2rem;
+	}
+}
+
 @media screen and (min-width: 600px) {
   .usa-alert {
     background-size: 4.2rem;
